--- a/index/Mod_base/GGA.html
+++ b/index/Mod_base/GGA.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gege Akutami</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="../Clanes/Clanes.css">
     <link rel="icon" href="index/favicon.ico" type="image/x-icon">
     <link rel="icon" href="index/favicon2.webp" type="image/webp">
     <link rel="canonical" href="https://crades12.github.io/">
@@ -29,7 +29,7 @@
             {
                 "@type":"Listlitem",
                 "position":3,
-                "name":"JUjutsu kaisen",
+                "name":"Jujutsu kaisen",
                 "item":"https://crades12.github.io/index/Mod_base/Jujutsu-kaisen.html"
             },
            
@@ -49,7 +49,7 @@
         <h1>Autor</h1>
         <img src="gg.webp" alt="">
                 <hr>
-        <a href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="jujutsu-craft.html">Jujutsu Craft</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Jujutsu-kaisen.html">Jujutsu kaisen</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="GGA.html">Gege Akutami</a>
+        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="jujutsu-craft.html">Jujutsu Craft</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a  class="pan" href="Jujutsu-kaisen.html">Jujutsu kaisen</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="GGA.html">Gege Akutami</a>
         <hr>
     </header>
     <main>
