--- a/index/Mod_base/Jujutsu-kaisen.html
+++ b/index/Mod_base/Jujutsu-kaisen.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jujutsu kaisen</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="../Clanes/Clanes.css">
     <link rel="icon" href="index/favicon.ico" type="image/x-icon">
     <link rel="icon" href="index/favicon2.webp" type="image/webp">
     <link rel="canonical" href="https://crades12.github.io/">
@@ -43,13 +43,13 @@
     </header>
     <img src="jjk.webp" alt="">
     <hr>
-    <a href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-        href="jujutsu-craft.html">Jujutsu Craft</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-        href="Jujutsu-kaisen.html">Jujutsu kaisen</a>
+    <a  class="pan"  href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+      class="pan" href="jujutsu-craft.html">Jujutsu Craft</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+         class="pan" href="Jujutsu-kaisen.html">Jujutsu kaisen</a>
     <hr>
     <main>
         <h2>¿Que es?</h2>
-        <p>Jujutsu kaisen una serie de manga japonés escrita e ilustrada por <a href="GGA.html">Gege Akutami</a>.</p>
+        <p>Jujutsu kaisen una serie de manga japonés escrita e ilustrada por <a  class="pan" href="GGA.html">(Gege Akutami)</a>.</p>
         <p>En este universo todos los seres vivos emanan una energía llamada Energía Maldita, que brota de las emociones
             negativas que fluyen naturalmente por el cuerpo. Las personas normales no tienen la habilidad de controlar
             este flujo en sus cuerpos. Como resultado, liberan continuamente esta Energía Maldita, lo que da lugar a que
