--- a/index/Mod_base/jujutsu-craft.html
+++ b/index/Mod_base/jujutsu-craft.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jujutsu craft</title>
-    <link rel="stylesheet" href="jjc.css">
+    <link rel="stylesheet" href="../Clanes/Clanes.css">
     <link rel="icon" href="index/favicon.ico" type="image/x-icon">
     <link rel="icon" href="index/favicon2.webp" type="image/webp">
     <link rel="canonical" href="https://crades12.github.io/">
@@ -36,14 +36,14 @@
         <h1>Jujutsu craft</h1>
         <img src="jjc.webp" alt="">
         <hr>
-        <a href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-            href="jujutsu-craft.html">Jujutsu Craft</a>
+        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+           class="pan" href="jujutsu-craft.html">Jujutsu Craft</a>
         <hr>
     </header>
     <main>
         <h2>¿Que es?</h2>
         <p>Jujutsu craft es un mod sin ánimo de lucro, creado por los fanáticos, creado para el disfrute de la
-            comunidad, esta basado en el famoso anime <a href="Jujutsu-kaisen.html">Jujutsu kaisen</a>.</p>
+            comunidad, esta basado en el famoso anime <a  class="pan" href="Jujutsu-kaisen.html">(Jujutsu kaisen)</a>.</p>
         <h2>Transformación</h2>
         <p>Jujutsu Craft Mod transforma tu mundo de Minecraft en un dominio peligroso infestado de espíritus malditos.
 
