--- a/index/Extensiones/Extension-hakari/Extension-hakari.html
+++ b/index/Extensiones/Extension-hakari/Extension-hakari.html
@@ -27,15 +27,14 @@
         <hr>
         <p>-Extras</p>
         <ul>
-            <li>Lograr el <a href="Jackpot.html">jackpot</a> de manera consecutiva acumula suerte.
+            <li>Lograr el jackpot de manera consecutiva acumula suerte.
                 Cuanta más suerte tenga el usuario más fácil serálograrun jackpot. Lograr un jackpot elimina el enfriamiento de las habilidades
             </li>
-            <li>Con el clan hakari, el tiempo del <a href="Jackpot.html">Jackpot</a> aumenta a 4 minutos y 11 segundos</li>
+            <li>Con el clan hakari, el tiempo del Jackpot aumenta a 4 minutos y 11 segundos</li>
         </ul>
         <hr>
     </main>
-    <footer><a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a>
+    <footer>
         &copy;Abel González
 </footer>
 </body>
